--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     
             <a class="nav-link" href="#vis">VISIÓN</a>
             <a class="nav-link" href="#val">VALORES</a>
-            <a class="nav-link" href="#contact">Contacto</a>
+            <a class="nav-link" href="#res">RESPALDO PROFECIONAL</a>
+            <a class="nav-link" href="#contact">CONTACTO</a>
           </div>
         </div>
       </div>
@@ -103,28 +104,41 @@
       <h2 class="text-center display-6 pt-4 pb-2 mb-0 text-barlow titulo-animado">
         VALORES:
       </h2>
-
-      <ul class="text-barlowc texto-fade description pt-4">
-        <li class="pb-3"><strong>Actitud De Servicio</strong>⏰🕒</li>
-        <li class="pb-3"><strong>Innovación</strong>📝📊</li>
-        <li class="pb-3"><strong>Puntualidad</strong>📞📲</li>
-        <li class="pb-3"><strong>Compromiso</strong>🔍🕵️‍♂️</li>
-        <li class="pb-3"><strong>Honestidad</strong>💸👍</li>
-        <li class="pb-3"><strong>Lealtad</strong>💸👍</li>
-        <li class="pb-3"><strong>Integridad</strong>💸👍</li>
-        <li class="pb-3"><strong>Responsabilidad</strong>💸👍</li>
-        <li class="pb-3"><strong>Ética Profesional</strong>💸👍</li>
-      </ul>
-      <h2 class="text-center display-6 pt-4 pb-2 mb-0 text-barlow titulo-animado">
-        Honorarios:
+      <div class="d-flex justify-content-center">
+        <ul class="text-barlowc texto-fade description pt-4">
+          <li class="pb-3"><strong>Actitud De Servicio</strong>⏰🕒</li>
+          <li class="pb-3"><strong>Innovación</strong>📝📊</li>
+          <li class="pb-3"><strong>Puntualidad</strong>📞📲</li>
+          <li class="pb-3"><strong>Compromiso</strong>🔍🕵️‍♂️</li>
+          <li class="pb-3"><strong>Honestidad</strong>💸👍</li>
+          <li class="pb-3"><strong>Lealtad</strong>💸👍</li>
+          <li class="pb-3"><strong>Integridad</strong>💸👍</li>
+          <li class="pb-3"><strong>Responsabilidad</strong>💸👍</li>
+          <li class="pb-3"><strong>Ética Profesional</strong>💸👍</li>
+        </ul>
+      </div>
+    </div>
+    <div id="res" class="bg-light py-4">
+      <h2 class="text-center display-3 pt-4 pb-2 mb-0 text-barlow titulo-animado">
+        RESPALDO PROFECIONAL
       </h2>
-      <ul class="px-5 text-barlowc texto-fade description pt-4">
-        <li class="pb-3">Cobramos un 20% de la indemnización si es exitosa. 📈💸</li>
-        <li class="pb-3">No cobramos nada si el siniestro es rechazado. 🙅‍♂️👎</li>
-      </ul>
+      <p class="px-5 text-barlowc texto-fade description text-center pt-4">ContarGroup cuenta con personal altamente calificado en las diferentes áreas de especialización, dedicados a la implementación de las soluciones que comercializa.</p>
+      <p class="px-5 text-barlowc texto-fade description text-center pt-4"> Nuestro equipo se prepara en forma permanente para satisfacer las necesidades de nuestros clientes contando con certificaciones en las distintas áreas.</p>
+
+      <!-- <h2 class="display-3 pt-4 pb-2 mb-0 text-barlow titulo-animado">Certificaciones del Personal</h2>
+      <div>
+        <ul class="text-barlowc texto-fade description pt-4">
+          <li class="pb-3"><strong>Certificado de Tributacion</strong></li>
+          <li class="pb-3"><strong>Certificado en Contabilidad Para la toma de decisiones</strong></li>
+          <li class="pb-3"><strong>Certificado en Control presupuestario</strong></li>
+          <li class="pb-3"><strong>Certificado en Analisis de cuentas</strong></li>
+          <li class="pb-3"><strong>Certificado en Gestion Laboral y Remuneraciones</strong></li>
+          <li class="pb-3"><strong>Certificado Internacional en Ingles Intermedio</strong></li>
+        </ul>
+      </div> -->
       <div class="d-flex justify-content-center pb-4">
         <!-- Botón para agendar visita -->
-        <a href="https://wa.me/56920700893?text=Hola,%20me%20gustaría%20agendar%20una%20visita." 
+        <a href="https://wa.me/56920700893?text=Hola,%20me%20gustaría%20agendar%20una%20visita."
           class="btn-agenda" target="_blank">
           📅 Agenda tu visita
         </a>
@@ -165,8 +179,9 @@
       <p class="px-5 text-barlowc texto-fade description text-center text-dark bg-light w-75 rounded d-flex align-items-center justify-content-center">Contacto@asesoresryf.com</p>
       <p class="px-5 text-barlowc texto-fade description text-center pt-4 text-light">Redes:</p>
       <div class="col-12 col-md-3 d-flex justify-content-center gap-5 pb-5">
-        <a href="https://www.instagram.com/asesoresryf" target="_blank"><i class="fa-brands fa-square-instagram fa-3x bg-insta active"></i></a>
-        <a href="https://www.facebook.com/share/14n382nfdU/" target="_blank"><i class="fa-brands fa-square-facebook fa-3x text-primary"></i></a>
+        <a href="https://www.instagram.com/contargroup/?hl=es" target="_blank"><i class="fa-brands fa-square-instagram fa-3x bg-insta active"></i></a>
+        <a href="https://www.facebook.com/ContarGroup" target="_blank"><i class="fa-brands fa-square-facebook fa-3x text-primary"></i></a>
+        <a href="https://www.linkedin.com/in/contar-group/" target="_blank"><i class="fa-brands fa-square-linkedin fa-3x text-primary"></i></a>
       </div>
       <p class="px-5 text-barlowc texto-fade description text-center pt-4 text-light">Dirección:</p>
       <p class="px-5 text-barlowc texto-fade description text-center text-dark bg-light w-75 rounded d-flex align-items-center justify-content-center">30 Oriente #1420 Oficina 514 - Edificio Plaza Oriente</p>
