--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ContarGroup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
@@ -156,16 +156,16 @@
           <li class="pb-3"><strong>Certificado Internacional en Ingles Intermedio</strong></li>
         </ul>
       </div> -->
-      <div class="d-flex justify-content-center pb-4">
+      <!-- <div class="d-flex justify-content-center pb-4"> -->
         <!-- Botón para agendar visita -->
-        <a href="https://wa.me/56920700893?text=Hola,%20me%20gustaría%20agendar%20una%20visita."
+        <!-- <a href="https://wa.me/56920700893?text=Hola,%20me%20gustaría%20agendar%20una%20visita."
           class="btn-agenda" target="_blank">
           📅 Agenda tu visita
         </a>
-      </div>
+      </div> -->
     </div>
 
-    <div class="counter-container pt-5 pb-5 bg-seguro">
+    <!-- <div class="counter-container pt-5 pb-5 bg-seguro">
       <div class="bg-whiteopacity rounded p-4">
         <div class="counter-box">
           <p class="text-barlowc text-count">Número de clientes atendidos</p>
@@ -184,7 +184,7 @@
           <p class="counter" data-target="15">0</p>
         </div>
       </div>
-    </div>
+    </div> -->
     
     <div id="contact" class="bg-dark py-4 d-flex flex-column justify-content-center align-items-center widthcien">
       <a class="navbar-brand py-2 logoanimacion aparicion d-flex justify-content-center" href="./index.html">
@@ -201,7 +201,7 @@
       <div class="col-12 col-md-3 d-flex justify-content-center gap-5 pb-5">
         <a href="https://www.instagram.com/contargroup/?hl=es" target="_blank"><i class="fa-brands fa-square-instagram fa-3x bg-insta active"></i></a>
         <a href="https://www.facebook.com/ContarGroup" target="_blank"><i class="fa-brands fa-square-facebook fa-3x text-primary"></i></a>
-        <a href="https://www.linkedin.com/in/contar-group/" target="_blank"><i class="fa-brands fa-square-linkedin fa-3x bg-insta active"></i></a>
+        <a href="https://www.linkedin.com/in/contar-group/" target="_blank"><i class="fa-brands fa-square-linkedin fa-3x"></i></a>
       </div>
       <p class="px-5 text-barlowc texto-fade description text-center pt-4 text-light">Dirección:</p>
       <p class="px-5 text-barlowc texto-fade description text-center text-dark bg-light w-75 rounded d-flex align-items-center justify-content-center">30 Oriente #1420 Oficina 514 - Edificio Plaza Oriente</p>
@@ -214,11 +214,11 @@
     </div>
      </div>
      <footer class="row bgfoot p-5 gap-5 justify-content-evenly align-items-center">
-      <div class="col-12 col-md-3 d-flex justify-content-center flex-column gap-2 text-center">
+      <!-- <div class="col-12 col-md-3 d-flex justify-content-center flex-column gap-2 text-center">
         <a href="#nos"; class="hp">Sobre Nosotros</a>
         <a href="#serv"; class="hp">Servicio</a>
         <a href="#contact"; class="hp">Contacto</a>
-      </div>
+      </div> -->
       
       <div class="col-12 col-md-3 d-flex justify-content-center"><p>Todos los derechos reservados.</p></div>
     </footer>
