toda la info ingresada

--- a/planRemuneracionesEmpresas.html
+++ b/planRemuneracionesEmpresas.html
@@ -42,11 +42,11 @@
                 PLANES
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./planPymePro.html">Plan Pyme Pro</a></li>
                 <li><a class="dropdown-item" href="./planFull.html">Plan Full</a></li>
                 <li><a class="dropdown-item" href="./planEmprendedor.html">Plan Emprendedor</a></li>
                 <li><a class="dropdown-item" href="./planBasicContable.html">Plan Basic Contable</a></li>
                 <li><a class="dropdown-item" href="./planRemuneracionesPymes.html">Plan Remuneraciones Pymes</a></li>
-                <li><a class="dropdown-item" href="./planRemuneracionesEmpresas.html">Plan Remuneraciones Empresas</a></li>
               </ul>
             </div>
             <div class="nav-item dropdown">
@@ -67,29 +67,25 @@
 
       <div id="nos" class="bg-ryf py-4">
         <h2 class="text-center display-3 pt-4 pb-2 mb-0 text-barlow titulo-animado">
-          PLAN PYME PRO
+          PLAN REMUNERACIONES EMPRESAS
         </h2>
+        <p class="px-5 text-barlowc texto-fade description text-center pt-4">de 5 o más trabajadores</p>
       </div>
       <div id="serv" class="bg-light py-4">
         <h2 class="text-center display-3 pt-4 pb-2 mb-0 text-barlow titulo-animado">
-          3 UF + IVA (Mensual)
+          2 UF + IVA (Mensual)
         </h2>
         <div class="d-flex justify-content-center">
           <ul class="text-barlowc texto-fade description pt-4">
-            <li class="pb-3"><strong>Declaración mensual de impuestos (F29 o 50)</strong></li>
-            <li class="pb-3"><strong>Asesoría contable permanente</strong></li>
-            <li class="pb-3"><strong>Revisión y validación del Registro de Compras y Ventas, RCV.</strong></li>
-            <li class="pb-3"><strong>Registro de compras, ventas y honorarios (documentos).</strong></li>
-            <li class="pb-3"><strong>Registros de Importaciones</strong></li>
-            <li class="pb-3"><strong>Registros contables en nuestro sistema online (mensual)</strong></li>
-            <li class="pb-3"><strong>Habilitación de sistema contable online con acceso para el cliente</strong></li>
-            <li class="pb-3"><strong>Control y registro de fondos por rendir detallado</strong></li>
-            <li class="pb-3"><strong>Control y registro de préstamos bancario o leasing</strong></li>
-            <li class="pb-3"><strong>Apoyo en la Emisión de facturas de ventas</strong></li>
-            <li class="pb-3"><strong>Balance Tributario y financiero en IFRS (trimestral)</strong></li>
-            <li class="pb-3"><strong>Balance y estado de resultado clasificado trimestral</strong></li>
-            <li class="pb-3"><strong>Declaraciones Juradas anual sin costo adicional</strong></li>
-            <li class="pb-3"><strong>Declaración de Renta (F22) con 70% descuento</strong></li>
+            <li class="pb-3"><strong>Elaboración de contratos de trabajo con sus actualizaciones y anexos</strong></li>
+            <li class="pb-3"><strong>Cálculo y confección de finiquitos</strong></li>
+            <li class="pb-3"><strong>Cálculo de liquidaciones de sueldo mensuales</strong></li>
+            <li class="pb-3"><strong>Cálculo y declaración de imposiciones mensuales a instituciones previsionales</strong></li>
+            <li class="pb-3"><strong>Cálculos y emisión de comprobantes de vacaciones</strong></li>
+            <li class="pb-3"><strong>Confección de libro de remuneraciones, cotizaciones previsionales, centralización contable y otros reportes personalizados (F30 y F30-1)	</strong></li>
+            <li class="pb-3"><strong>Acceso al sistema de remuneraciones online</strong></li>
+            <li class="pb-3"><strong>Soporte telefónico y vía email en forma permanente para asesorar a la administración de la empresa en todos los aspectos laborales</strong></li>
+            <li class="pb-3"><strong>Cumplimiento normativo impartido por la Dirección del Trabajo</strong></li>
           </ul>
         </div>
       </div>
