--- a/planBasicContable.html
+++ b/planBasicContable.html
@@ -42,9 +42,9 @@
                 PLANES
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./planPymrPro.html">Plan Pyme Pro</a></li>
                 <li><a class="dropdown-item" href="./planFull.html">Plan Full</a></li>
                 <li><a class="dropdown-item" href="./planEmprendedor.html">Plan Emprendedor</a></li>
-                <li><a class="dropdown-item" href="./planBasicContable.html">Plan Basic Contable</a></li>
                 <li><a class="dropdown-item" href="./planRemuneracionesPymes.html">Plan Remuneraciones Pymes</a></li>
                 <li><a class="dropdown-item" href="./planRemuneracionesEmpresas.html">Plan Remuneraciones Empresas</a></li>
               </ul>
@@ -67,12 +67,12 @@
 
       <div id="nos" class="bg-ryf py-4">
         <h2 class="text-center display-3 pt-4 pb-2 mb-0 text-barlow titulo-animado">
-          PLAN PYME PRO
+          PLAN BASIC CONTABLE
         </h2>
       </div>
       <div id="serv" class="bg-light py-4">
         <h2 class="text-center display-3 pt-4 pb-2 mb-0 text-barlow titulo-animado">
-          3 UF + IVA (Mensual)
+          1.7 UF + IVA (Mensual)
         </h2>
         <div class="d-flex justify-content-center">
           <ul class="text-barlowc texto-fade description pt-4">
@@ -83,13 +83,11 @@
             <li class="pb-3"><strong>Registros de Importaciones</strong></li>
             <li class="pb-3"><strong>Registros contables en nuestro sistema online (mensual)</strong></li>
             <li class="pb-3"><strong>Habilitación de sistema contable online con acceso para el cliente</strong></li>
-            <li class="pb-3"><strong>Control y registro de fondos por rendir detallado</strong></li>
-            <li class="pb-3"><strong>Control y registro de préstamos bancario o leasing</strong></li>
             <li class="pb-3"><strong>Apoyo en la Emisión de facturas de ventas</strong></li>
             <li class="pb-3"><strong>Balance Tributario y financiero en IFRS (trimestral)</strong></li>
             <li class="pb-3"><strong>Balance y estado de resultado clasificado trimestral</strong></li>
             <li class="pb-3"><strong>Declaraciones Juradas anual sin costo adicional</strong></li>
-            <li class="pb-3"><strong>Declaración de Renta (F22) con 70% descuento</strong></li>
+            <li class="pb-3"><strong>Declaración de Renta (F22) con 50% descuento</strong></li>
           </ul>
         </div>
       </div>
